Fix various Missing Null checks

For https://bugzilla.gnome.org/show_bug.cgi?id=732823